# sexi

./: .gitignore  CMakeLists.txt  LICENSE  README.md
build-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-Desktop-Debug/.cmake/api/v1/reply/: codemodel-v2-3a295a41520cc9f928bd.json  index-2021-10-02T04-58-10-0857.json  target-sexi-Debug-02c6aac9c92d9ef6c047.json
build-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-7b894be5be8c774e5cd0.json  cmakeFiles-v1-9aea0c394049c5f538ec.json  codemodel-v2-434f34207f1405582699.json  index-2021-10-02T04-57-37-0344.json  target-sexi-Debug-538dc71d6b5dcc1abf2f.json  target-sexi-test-Debug-ef223c32e43b152ad89c.json
build-Desktop-Debug/lib/: Makefile  cmake_install.cmake
build-Desktop-Debug/testing/: Makefile  cmake_install.cmake  sexi-test
include/: sexi.h  sexi.hpp
include/sexi/: Expr.h  Expr.hpp  Value.hpp  literals.hpp
lib/: CMakeLists.txt  Expr.cpp  parse.cpp
testing/: CMakeLists.txt  main.cpp  test.se
